--- a/index.html
+++ b/index.html
@@ -637,10 +637,7 @@
                             <span class="alert-title">تنبيه هام</span>
                             <span class="alert-time">الآن</span>
                         </div>
-                        <div class="alert-message">
-                            يشهد معبر الكرامة في هذه الأثناء حركة سفر نشطة، حيث يعمل المعبر دون تحديد ساعات عمل ثابتة نظراً للظروف الراهنة.
-                            يرجى متابعة التحديثات الرسمية أولاً بأول وشكراً لتفهمكم.
-                            #ساعات_العمل #معبر_الكرامة
+                        <div class="alert-message">صدقه جاريه عني وعن والدي وعن اخواني واخواتي وعن امة المسلمين جميعا
                         </div>
                     </div>
                     <div class="alert">
@@ -685,8 +682,8 @@
 
         <footer class="footer">
             <p>© 2025 جسر الملك حسين - نظام المراقبة الذكي | آخر تحديث: <span id="last-update"></span></p>
-            <p>عدد الزوار: <span id="visitor-count">0</span></p>
-            <p>تم التصميم بواسطة ياسين ياسين</p>
+             
+            <p>تم التصميم بواسطة  فلسطيني 🇵🇸</p>
         </footer>
     </div>
 
