Update taxi driver info - سفريات السيلاوي

--- a/index.html
+++ b/index.html
@@ -655,8 +655,8 @@
                 <div class="taxi-info">
                     <p>للتواصل مع سائقي التاكسي المعتمدين من عمان إلى جسر الملك حسين:</p>
                     <div class="taxi-item">
-                        <span>اسم السائق 1:</span>
-                        <a href="tel:+9627XXXXXXXX">+9627XXXXXXXX</a>
+                        <span>اسم السائق 1: سفريات السيلاوي</span>
+                        <a href="tel:+00962795299355">00962795299355</a>
                     </div>
                     <div class="taxi-item">
                         <span>اسم السائق 2:</span>
