Further design enhancements for improved readability and aesthetics

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <header class="header">
+    <div class="main-wrapper">
+        <div class="container">
+            <header class="header">
             <div class="alert-saturday-closed">
                 ⚠️ الجسر مغلق يوم السبت ⚠️
             </div>
