--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
             <p>نظام المراقبة الذكي</p>
             <div id="bridge-status">
                 <span>حالة الجسر (الجانب الأردني): </span>
-                <span id="status-text">مفتوح</span>
+                <span id="status-text">مغلق</span>
                 <span class="status-indicator status-open" id="status-indicator"></span>
             </div>
             <div id="palestinian-bridge-status">
                 <span>حالة الجسر (الجانب الفلسطيني): </span>
-                <span id="pal-status-text">حركة سفر نشطة</span>
+                <span id="pal-status-text">مغلق </span>
                 <span class="status-indicator status-open" id="pal-status-indicator"></span>
             </div>
         </header>
