Fix HTML structure errors and update weather API key

--- a/index.html
+++ b/index.html
@@ -132,9 +132,11 @@
                 </div>
                 <button class="refresh-btn" onclick="refreshTraffic()">تحديث حالة الطرق</button>
             </div>
-class="card">
+            <div class="card">
                 <div class="card-header">
-                    <div class="card-icon alerts-icon">🔔</div                    <h2>صدقة جارية</h2>               </div>
+                    <div class="card-icon alerts-icon">🔔</div>
+                    <h2>صدقة جارية</h2>
+                </div>
                 <div id="alerts-content">
                     <div class="alert">
                         <div class="alert-header">
@@ -146,10 +148,7 @@ class="card">
                     </div>
                 </div>
                 <button class="refresh-btn" onclick="refreshAlerts()">تحديث التنبيهات</button>
-            </div>هات</button>
             </div>
-
-            <!-- قسم تكسي الجسر -->
             <div class="card">
                 <div class="card-header">
                     <div class="card-icon taxi-icon">🚕</div>
