Fix: إصلاح الأخطاء وتحديث مفتاح API للطقس، وتعديل منطق تحديث حالة الجسر الفلسطيني.

--- a/index.html
+++ b/index.html
@@ -130,9 +130,7 @@
                         <div class="stat-label">عدد المركبات</div>
                     </div>
                 </div>
-                <button class="refresh-btn" onclick="refreshTraffic()">تحديث حالة الطرق</button>
-            </div>
-            <div class="card">
+                <button class="refresh-btn" onclick="refreshTraffic()">تحديث حالة الطرق</button>            <div class="card">
                 <div class="card-header">
                     <div class="card-icon alerts-icon">🔔</div>
                     <h2>صدقة جارية</h2>
