--- a/index.html
+++ b/index.html
@@ -10,12 +10,17 @@
     <div class="main-wrapper">
         <div class="container">
             <header class="header">
-            <div id="weather-display" class="weather-display">
-                <img id="weather-icon" src="" alt="Weather Icon" class="weather-icon-img">
-                <span id="temperature-display">--°</span>
-            </div>
+            
             <div class="alert-saturday-closed">
                 ⚠️ الجسر مغلق يوم السبت ⚠️
+            </div>
+            <div class="theme-switcher">
+                <label for="theme-select">اختر المظهر:</label>
+                <select id="theme-select">
+                    <option value="default">الافتراضي</option>
+                    <option value="dark">داكن</option>
+                    <option value="blue">أزرق</option>
+                </select>
             </div>
             <h1>🌉 جسر الملك حسين</h1>
             <p>نظام المراقبة الذكي</p>
@@ -377,7 +382,6 @@
             refreshNews();
             refreshSchedule();
             refreshTraffic();
-            refreshWeather();
             refreshAlerts();
             
             // تحديث الوقت كل دقيقة
